--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,8 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
-    "\n",
+    "# Prueba\n",
     "> API details."
    ]
   },
