--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prueba\n",
+    "# hola, nbdev\n",
     "> API details."
    ]
   },
@@ -129,6 +129,26 @@
    "outputs": [],
    "source": [
     "assert say_hello(\"Jeremy\")==\"Hello Jeremy!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La suma de 3 y 1 es 4'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suma(3,1)"
    ]
   },
   {
