--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# default_exp core"
    ]
   },
@@ -13,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# hola, nbdev\n",
+    "# module name here\n",
     "> API details."
    ]
   },
@@ -24,6 +34,8 @@
    "outputs": [],
    "source": [
     "#hide\n",
+    "from fastai2.torch_basics import *\n",
+    "from fastcore.test import *\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -65,69 +77,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def suma(a,b):\n",
-    "    \"Suma dos números\"\n",
-    "    return f'La suma de {a} y {b} es {a+b}'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'La suma de 3 y -4 es -1'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "suma(3,-4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import display,SVG"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg height=\"100\"><circle cx=\"50\" cy=\"50\" r=\"40\"/></svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(SVG(\n",
-    "    '<svg height=\"100\"><circle cx=\"50\" cy=\"50\" r=\"40\"/></svg>'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "assert say_hello(\"Jeremy\")==\"Hello Jeremy!\""
    ]
   },
@@ -135,11 +84,60 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class HelloSayer:\n",
+    "    \"Say hello to `to` using `say_hello`\"\n",
+    "    def __init__(self, to): self.to = to\n",
+    "\n",
+    "    def say(self):\n",
+    "        \"Do the saying\"\n",
+    "        return say_hello(self.to)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"HelloSayer.say\" class=\"doc_header\"><code>HelloSayer.say</code><a href=\"__main__.py#L6\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>HelloSayer.say</code>()\n",
+       "\n",
+       "Do the saying"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(HelloSayer.say)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'La suma de 3 y 1 es 4'"
+       "'Hello Alexis!'"
       ]
      },
      "execution_count": null,
@@ -148,7 +146,8 @@
     }
    ],
    "source": [
-    "suma(3,1)"
+    "o = HelloSayer(\"Alexis\")\n",
+    "o.say()"
    ]
   },
   {
