--- a/index.ipynb
+++ b/index.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#hide\n",
     "from hola_nbdev.core import *"
    ]
@@ -79,7 +89,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from nbdev.export\n",
+    "notebook2script()"
+   ]
   }
  ],
  "metadata": {
