--- a/index.ipynb
+++ b/index.ipynb
@@ -88,11 +88,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
    "source": [
-    "from nbdev.export\n",
+    "#hide\n",
+    "from nbdev.export import notebook2script\n",
     "notebook2script()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
