--- a/index.ipynb
+++ b/index.ipynb
@@ -104,6 +104,11 @@
      "output_type": "stream",
      "text": [
       "Converted 00_core.ipynb.\n",
+      "Converted 3_Sentiment.ipynb.\n",
+      "No export destination, ignored:\n",
+      "#export\n",
+      "say_hello(\"pirata\")\n",
+      "Warning: Exporting to \"None.py\" but this module is not part of this build\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -112,6 +117,46 @@
     "#hide\n",
     "from nbdev.export import notebook2script\n",
     "notebook2script()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "obama_tweets = open('obama_tweets.txt', 'r').read()\n",
+    "obama_tweets = obama_tweets.splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def open_list(filename):\n",
+    "    list_file = open(filename, 'r').read()\n",
+    "    list_file = list_file.splitlines()\n",
+    "    return list_file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejemplo prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obama_tweets = open_list('obama_tweets.txt')"
    ]
   }
  ],
