--- a/index.ipynb
+++ b/index.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -98,25 +89,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 00_core.ipynb.\n",
-      "Converted 3_Sentiment.ipynb.\n",
-      "No export destination, ignored:\n",
-      "#export\n",
-      "say_hello(\"pirata\")\n",
-      "Warning: Exporting to \"None.py\" but this module is not part of this build\n",
-      "Converted index.ipynb.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#hide\n",
-    "from nbdev.export import notebook2script\n",
-    "notebook2script()"
+    "#from nbdev.export import notebook2script\n",
+    "#notebook2script()"
    ]
   },
   {
@@ -156,8 +133,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "obama_tweets = open_list('obama_tweets.txt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
