eliminé un archivo

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -187,6 +187,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#https://nbviewer.jupyter.org/github/mbakker7/exploratory_computing_with_python/blob/master/notebook4_functions/py_exploratory_comp_4_sol.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
