--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -23,6 +23,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#!pip install git+https://github.com/fastai/fastai2 \n",
+    "#!pip install git+https://github.com/fastai/fastcore\n",
+    "#!python -m pip install git+https://github.com/fastai/fastai.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#hide\n",
     "from fastai2.torch_basics import *\n",
     "from fastcore.test import *\n",
@@ -146,14 +157,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#https://nbviewer.jupyter.org/github/mbakker7/exploratory_computing_with_python/blob/master/notebook4_functions/py_exploratory_comp_4_sol.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.049787068367863944\n"
+     ]
+    }
+   ],
+   "source": [
     "#export\n",
-    "class HelloSayer:\n",
-    "    \"Say hello to `to` using `say_hello`\"\n",
-    "    def __init__(self, to): self.to = to\n",
+    "def func(x):\n",
+    "    if x < 0:\n",
+    "        f = np.cos(x)\n",
+    "    else:\n",
+    "        f = np.exp(-x)\n",
+    "    return f\n",
     "\n",
-    "    def say(self):\n",
-    "        \"Do the saying\"\n",
-    "        return say_hello(self.to)"
+    "print(func(3))"
    ]
   },
   {
@@ -164,11 +193,10 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"HelloSayer.say\" class=\"doc_header\"><code>HelloSayer.say</code><a href=\"__main__.py#L6\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"func\" class=\"doc_header\"><code>func</code><a href=\"__main__.py#L1\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>HelloSayer.say</code>()\n",
-       "\n",
-       "Do the saying"
+       "> <code>func</code>(**`x`**)\n",
+       "\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -179,16 +207,7 @@
     }
    ],
    "source": [
-    "show_doc(HelloSayer.say)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#https://nbviewer.jupyter.org/github/mbakker7/exploratory_computing_with_python/blob/master/notebook4_functions/py_exploratory_comp_4_sol.ipynb"
+    "show_doc(func)"
    ]
   },
   {
