--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -32,6 +32,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "No export destination, ignored:\n",
+      "#export\n",
+      "say_hello(\"pirata\")\n",
+      "Warning: Exporting to \"None.py\" but this module is not part of this build\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nbdev.export import notebook2script; \n",
+    "notebook2script()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#hide\n",
